Revision history for Perl module Geo::Coder::Many.

0.47    2017-01-30
        - improved POD
        - remove suppor for Ovi, PlaceFind and Google (but kept Googlev3)
          all three longer exist

0.46    2014-06-01
        - Add support for Geo::Coder::OpenCage

0.45    2013-12-11
        - Add 'lib' to @INC in Build.PL
          Thanks Slaven (https://rt.cpan.org/Ticket/Display.html?id=91283)

0.44    2013-12-09
        - Correctly added repo information to Makefile.PL

0.43    2013-12-09
        - Added META.json with repository information

0.42    2013-07-18
        - Updated Changes to conform to CPAN::Changes::Spec
        - Added a release test with Test::CPAN::Changes

0.41    2013-06-7
        - Removed smartmatch usage for Perl 5.18
        - Changed geocoders test input

0.40    2012-11-10
        - Updated documentation to make it clear that the cache object must
          work with references
        - Updated the _test_cache_object() method to check the above is true
        - Updated mapstraction link
        - Fixed bug in Build.PL - missing underscore in private method call
        - Removed Multimap from Build.PL optional dependencies list
          (Geo::Coder::Many::Multimap was removed in August 2011!)

0.30    2012-10-11
        - Changed minimum required version of Geo::Coder::Mapquest to 0.05 (it
          was previously 0.04, which is incompatible with our plugin.)
        - When calling add_geocoder(), check that the geocoder is compatible with
          the plugin, based on a minimum version requirement.

0.29    2012-08-15
        - don't instantiate Geo::Distance object on every call
        - use 'return;' over 'return undef;'

0.28    2011-10-12
        - dropping support for Geo::Coder::SimpleGeo
          seems it is no longer a freely available geocoder

0.27    2011-07-26
        - Geo::Coder::Many::Response::add_response now
          appends a space and the version of the geocoder used to the
          name of the geocoder